fix for scroll on mobile

--- a/client/css/root.css
+++ b/client/css/root.css
@@ -2294,6 +2294,10 @@ input[type="email"]:focus,
   overflow: hidden;
 }
 
+.overflow-y-auto{
+  overflow-y: auto;
+}
+
 .text-ellipsis{
   text-overflow: ellipsis;
 }
